# command-line-assistant

./: .env  .gitignore  .gitlab-ci.yml  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Containerfile  Makefile  README.md  config.toml  config.yaml  minishellai.py  podman-compose.yaml  pyproject.toml  renovate.json  requirements-build.txt  requirements-dev.txt  requirements.txt  rpms.in.yaml  rpms.lock.yaml  setup.py  shellai.py  sonar-project.properties  tox.ini
.devcontainer/: Containerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yaml  pull_request_template.md  release.yml
.github/workflows/: build-manpages.yaml  codeql.yml  codespell.yml  enforce_labels.yml  jira-links.yml  release.yml  sanity.yml  unit-tests.yml
.tekton/: pipeline-build.yaml  pull_request.yaml  push.yaml
command_line_assistant/: __init__.py  __main__.py  cli.py  client.py  colors.py  config.py  constants.py  exceptions.py  handlers.py  history.py  initialize.py  integrations.py  logger.py  logging.py  markdown.py  utils.py
command_line_assistant/commands/: __init__.py  base.py  chat.py  cli.py  feedback.py  history.py  query.py  record.py  shell.py
command_line_assistant/config/: __init__.py  schemas.py
command_line_assistant/config/schemas/: __init__.py  backend.py  database.py  history.py  logging.py
command_line_assistant/daemon/: __init__.py  clad.py  session.py
command_line_assistant/daemon/database/: __init__.py  manager.py
command_line_assistant/daemon/http/: __init__.py  adapters.py  query.py  session.py
command_line_assistant/dbus/: __init__.py  client.py  constants.py  context.py  definitions.py  exceptions.py  interfaces.py  sender_context.py  server.py  structures.py
command_line_assistant/dbus/interfaces/: __init__.py  authorization.py  chat.py  history.py  user.py
command_line_assistant/dbus/structures/: __init__.py  base.py  chat.py  history.py
command_line_assistant/history/: __init__.py  base.py  manager.py  schemas.py
command_line_assistant/history/plugins/: __init__.py  local.py
command_line_assistant/rendering/: __init__.py  animation.py  base.py  colors.py  formatting.py  markdown.py  render.py  renderers.py  spinner.py  stream.py  streaming.py  theme.py
command_line_assistant/rendering/decorators/: __init__.py  base.py  colors.py  style.py  text.py
command_line_assistant/rendering/renders/: __init__.py  interactive.py  markdown.py  spinner.py  text.py
command_line_assistant/terminal/: parser.py  reader.py
command_line_assistant/utils/: __init__.py  benchmark.py  cli.py  environment.py  files.py  renderers.py
container-images/: default.Containerfile
data/: README.md
data/development/certificate/: fake-key.pem
data/development/dbus/: com.redhat.lightspeed.conf
data/development/systemd/: clad-devel.service
data/release/: clad.service  com.redhat.lightspeed.conf  config.toml
data/release/dbus/: com.redhat.lightspeed.chat.service  com.redhat.lightspeed.conf  com.redhat.lightspeed.history.service  com.redhat.lightspeed.query.service  com.redhat.lightspeed.user.service
data/release/man/: c.1  clad.8
data/release/selinux/: Makefile  clad.fc  clad.if  clad.te
data/release/systemd/: clad.service  clad.tmpfiles.conf
data/release/xdg/: config.toml  history.json
docs/: requirements.txt
docs/source/: client.rst  conf.py  constants.rst  exceptions.rst  handlers.rst  index.rst  initialize.rst  integrations.rst  logger.rst  meta.rst
docs/source/commands/: base.rst  chat.rst  cli.rst  feedback.rst  history.rst  index.rst  query.rst  record.rst  shell.rst
docs/source/config/: config.rst  index.rst  schemas.rst
docs/source/daemon/: clad.rst  index.rst  session.rst
docs/source/dbus/: client.rst  constants.rst  context.rst  exceptions.rst  index.rst  interfaces.rst  sender_context.rst  server.rst  structures.rst
docs/source/history/: base.rst  index.rst  manager.rst  schemas.rst
docs/source/man/: clad.8.rst  command-line-assistant.1.rst  index.rst
docs/source/rendering/: animation.rst  base.rst  colors.rst  formatting.rst  index.rst  markdown.rst  renderers.rst  stream.rst  theme.rst
docs/source/terminal/: index.rst  parser.rst  reader.rst
docs/source/utils/: benchmark.rst  cli.rst  environment.rst  files.rst  index.rst  renderers.rst
examples/: ansi_markdown_demo.py
minishellai/: .gitignore  README.md  config.yaml  minishellai.py  pyproject.toml  requirements.txt
packaging/: command-line-assistant.spec  shellai.spec
schemas/: command-line-assistant-v0.1.json
scripts/: README.md  check_sphinx_docs.py  prepare_release.py
shellai/: __main__.py  core.py  handlers.py  main.py  sys_roles.py  utils.py
tests/: conftest.py  helpers.py  test_cli.py  test_client.py  test_config.py  test_formatting.py  test_handlers.py  test_history.py  test_initialize.py  test_logger.py  test_logging.py  test_main.py  test_markdown.py  test_utils.py
tests/commands/: test_chat.py  test_cli.py  test_commands.py  test_feedback.py  test_history.py  test_query.py  test_record.py  test_shell.py
tests/config/: test_config.py  test_schema.py
tests/config/schemas/: test_backend.py  test_database.py  test_logging.py  test_schema.py
tests/daemon/: test_clad.py  test_server.py  test_session.py
tests/daemon/database/: test_manager.py
tests/daemon/http/: test_query.py  test_session.py
tests/dbus/: test_client.py  test_context.py  test_interfaces.py  test_sender_context.py  test_server.py  test_structures.py
tests/dbus/interfaces/: test_chat.py  test_history.py  test_user.py
tests/dbus/structures/: test_chat.py  test_history.py
tests/history/: test_manager.py  test_schemas.py
tests/history/plugins/: test_local.py
tests/rendering/: test_colors.py  test_formatting.py  test_markdown.py  test_render.py  test_renderers.py  test_spinner.py  test_stream.py
tests/rendering/decorators/: test_colors.py  test_style.py  test_text.py
tests/terminal/: test_parser.py  test_reader.py
tests/utils/: test_benchmark.py  test_cli.py  test_environment.py  test_files.py  test_renderers.py
(+59 files in other folders)
