[project]
name = "command-line-assistant"
version = "0.1.0"
description = "A simple wrapper to interact with RAG"
authors = [
    { name = "RHEL Lightspeed team", email = "rhel-sst-lightspeed@redhat.com" },
]
maintainers = [
    { name = "Rodolfo Olivieri", email = "rolivier@redhat.com" },
    { name = "Major Hayden", email = "mhayden@redhat.com" },
]
dependencies = [
    # tomli is only required below 3.11 as it is native after that version.
    'tomli; python_version<"3.11"',
    "requests",
]
requires-python = ">=3.9" # RHEL 9 and 10
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Repository = "https://github.com/rhel-lightspeed/command-line-assistant.git"
Issues = "https://github.com/rhel-lightspeed/command-line-assistant/issues"

[project.scripts]
c = "command_line_assistant.__main__:main"

[build-system]
# pdm build is not available in rhel baseos repositories
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# ----- Tooling specifics

[tool.setuptools]
packages = ["command_line_assistant"]

[tool.ruff]
# Enable ruff rules to act like flake8
lint.select = [
    "E",   # pycodestyle (formerly part of flake8)
    "F",   # pyflakes (formerly part of flake8)
    "I",   # import order (like isort)
    "B",   # flake8-bugbear
    "C90", # flake8-comprehensions
]

# Exclude specific rules if needed
lint.ignore = [
    "E501", # Ignore line length (similar to flake8's max-line-length)
]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["pytest", "coverage"]
